@@ -5237,9 +5237,11 @@ Who were they?
 
 % action-verb questions
 Why bother?
+why do it?
 why run away?
 why go now?
 why cry?
+why be lonely, when you could buy a potted plant?
 
 He asked me: why go there?
 So why go there?
