@@ -6,6 +6,7 @@ Version 5.8.1 (XXX 2020)
  * Make -O3 default for CFLAGS/CXXFLAGS, but overridable by the user.
  * English dict: fix look_at, listen_to person_action
  * English dict: fix verb "felt" with object-action.
+ * English dict: fix why-perform-action questions.
 
 Version 5.8.0 (28 February 2020)
  * Java bindings: Remove the obsolete senses API.
